--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mahelaka Mansoori</title>
+    <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="utility.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +15,7 @@
   <body>
     <header>
       <div class="bg-image"></div>
+      
     </header>
     <main>
     
