--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=League+Spartan&family=Open+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <div class="bg-image"></div>
+
+      <div class="bg-image">
+
+        <!-- <img src="./Mahelaka_mobile.png" alt="mobile-hero-page"> -->
+      </div>
       
-    </header>
+ 
     <main>
     
         <div class="profile-img">
