Adding new project

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
             <h2>Projects</h2>
            <ul>
             <li>
+                <h3>QueenArc</h3>
+            <p>July 2023 - July 2023</p>
+            <a href="https://www.queenarc.in" target="_blank" class="remove-underline">https://www.queenarc.in</a>
+            <p class="p-color"><strong>Description:</strong> <strong>QueenArc</strong> is an innovative and user-friendly education consultant website that opens the door to endless opportunities for students seeking to study abroad. Built using the versatile WordPress platform, this project offers comprehensive services, including personalized overseas study programs, expert career counseling, and much more. <strong>QueenArc</strong>  aims to guide and support students on their educational journey, making the process of studying abroad hassle-free and rewarding. Whether it's navigating through study programs, understanding visa requirements, or gaining insights into different institutions.</p>
+        </li>
+            <li>
                 <h3>Urbangen</h3>
             <p>Mar 2023 - Mar 2023</p>
             <a href="https://www.urbangen.in" target="_blank" class="remove-underline">https://www.urbangen.in</a>
