Added new skill to the My Skill section

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 <li>Ms-Word</li>
                 <li>GitHub</li>
                 <li>Content Writing</li>
+		<li>Figma</li>
             </ul>
         </div>
         
